# ctf-script

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.deploy/: cleanup.yaml  common.yaml
.deploy/common/: dns.tf
.github/workflows/: tests.yml
challenges/mock-track-apache-php/: track.yaml
challenges/mock-track-apache-php/ansible/: deploy.yaml  inventory
challenges/mock-track-apache-php/ansible/challenge/: index.php
challenges/mock-track-apache-php/posts/: mock-track-apache-php-flag1.yaml  mock-track-apache-php.yaml
challenges/mock-track-apache-php/terraform/: main.tf
challenges/mock-track-files-only/: track.yaml
challenges/mock-track-files-only/posts/: mock-track-files-only-flag1.yaml  mock-track-files-only.yaml
challenges/mock-track-python-service/: track.yaml
challenges/mock-track-python-service/ansible/: deploy.yaml  inventory
challenges/mock-track-python-service/ansible/challenge/: app.py  flag-1.txt
challenges/mock-track-python-service/posts/: mock-track-python-service-flag1.yaml  mock-track-python-service-flag2.yaml  mock-track-python-service.yaml
challenges/mock-track-python-service/terraform/: main.tf  variables.tf  versions.tf
challenges/mock-track-with-build/: README.md  track.yaml
challenges/mock-track-with-build/ansible/: build.yaml  deploy.yaml  inventory
challenges/mock-track-with-build/ansible/challenge/: index.php
challenges/mock-track-with-build/posts/: mock-track-with-build_flag1.yaml
challenges/mock-track-with-build/terraform/: main.tf
ctf/: __init__.py  __main__.py  check.py  deploy.py  destroy.py  flags.py  generate.py  init.py  list.py  logger.py  models.py  new.py  post.py  redeploy.py  services.py  stats.py  utils.py  validate.py  validate_json_schemas.py  validators.py  version.py
ctf/askgod/: __init__.py  stats.py
ctf/commands/: check.py  deploy.py  destroy.py  flags.py  generate.py  init.py  list.py  new.py  redeploy.py  services.py  stats.py  validate.py  version.py
ctf/commands/askgod/: stats.py
ctf/commands/post/: __init__.py  new.py
ctf/common/: models.py  utils.py  validators.py
ctf/monitor/: __init__.py  flags.py  solves.py  stats.py
ctf/post/: new.py
ctf/schemas/: post.json  track.yaml.json
ctf/schemas/schemas/: track.yaml.json
ctf/templates/: deploy-apache-php.yaml.j2  deploy-python-service.yaml.j2  inventory.j2  main.tf.j2  post.yaml.j2  track.yaml.j2
ctf/templates/init/: .gitignore  README.md  README.md.j2  ctfconfig.yaml.j2  setup-codespace
ctf/templates/init/.deploy/: cleanup.yaml  common.yaml  track.yaml
ctf/templates/init/.deploy/common/: acl.tf  (+3 more)
ctf/templates/init/.devcontainer/: devcontainer.json
ctf/templates/init/schemas/: ctfconfig.json  post.json  track.yaml.json  track.yaml.json.j2
ctf/templates/new/apache-php/: deploy.yaml.j2
ctf/templates/new/common/: README.md.j2  build.yaml.j2  inventory.j2  main.tf.j2  track.yaml.j2
ctf/templates/new/infra-skeleton/: deploy.yaml.j2
ctf/templates/new/python-service/: app.py.j2  deploy.yaml.j2
ctf/templates/new/rust-webservice/: build.yaml.j2  deploy.yaml.j2
ctf/templates/new/windows-vm/: deploy.yaml.j2
ctf/templates/templates/: Cargo.toml.j2  main.tf.j2  post.yaml.j2  topic.yaml.j2  track.yaml.j2
templates/: deploy-apache-php.yaml.j2  deploy-python-service.yaml.j2  index.php.j2  inventory.j2  main.tf.j2  topic.yaml.j2  track.yaml.j2
(+25 files in other folders)
