[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "ctf-script"
authors = [{ name = "NorthSec Challenge Designers", email = "info@nsec.io" }]
description = "NorthSec CTF challenges"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black",
    "jinja2==3.1.6",
    "jsonschema==4.26.0",
    "pyyaml<7",
    "requests",
    "rich==15.0.0",
    "ruff==0.15.10",
    "setuptools",
    "typer==0.24.1",
    "pydantic",
]
version = "4.3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pre-commit", "ruff"]
workflow = [
    "pybadges",
    "matplotlib",
    "standard-imghdr ; python_version >= \"3.13\"",
    "ctf-script[dev]"
]

[project.scripts]
ctf = "ctf.__main__:main"

[tool.poetry]
packages = [{ include = "ctf" }]

[tool.setuptools.package-data]
ctf = ["schemas/*", "templates/*"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
